Refactor VSCode settings, Dockerfile, and test files for improved build tags and compatibility
- Updated VSCode settings to consolidate Go build flags and test tags for better clarity.
- Modified Dockerfile to include Docker-specific test tags, enhancing the testing process.
- Added build constraints to multiple test files to exclude Docker builds, improving compatibility with non-Docker environments.

These changes streamline the development workflow and enhance cross-platform compatibility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "gopls": {
-        "buildFlags": ["-tags=wireinject,docker"],
+        "buildFlags": ["-tags", "docker,wireinject"],
         "staticcheck": true,
         "completeUnimported": true,
         "matcher": "fuzzy"
@@ -38,7 +38,6 @@
     },
     "go.testFlags": ["-v"],
     "go.testOnSave": true,
-    "go.testTags": "integration,docker",
-    "go.testTimeout": "5m",
-    "go.buildTags": "wireinject,docker"
+    "go.testTags": "docker,wireinject",
+    "go.testTimeout": "5m"
 }
