Enhance CI workflows by adding system dependencies installation
- Added steps to install necessary system dependencies (gcc, libx11-dev, libxcursor-dev, libxrandr-dev, libxinerama-dev, libxi-dev, libxxf86vm-dev) in both go.yml and release.yml workflows.
- This change ensures that the required libraries are available for building and running the application in the CI environment, improving build reliability.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,10 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: 1.23
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
       - uses: actions/cache@v4
         with:
           path: |
@@ -44,6 +48,10 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: 1.23
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
       - uses: actions/cache@v4
         with:
           path: |
@@ -68,6 +76,10 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: 1.23
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
       - uses: actions/cache@v4
         with:
           path: |
