--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,35 +38,35 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Run linting
-        run: task lint:linux:docker
+        run: task lint:linux
 
-  test:
-    needs: prepare
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.23
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-test-${{ needs.prepare.outputs.go-cache-key }}
-      
-      - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.x
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Run tests
-        run: task test:linux:docker
+#  test:
+#    needs: prepare
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-go@v5
+#        with:
+#          go-version: 1.23
+#      - name: Install system dependencies
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
+#      - uses: actions/cache@v4
+#        with:
+#          path: |
+#            ~/.cache/go-build
+#            ~/go/pkg/mod
+#          key: ${{ runner.os }}-go-test-${{ needs.prepare.outputs.go-cache-key }}
+#
+#      - name: Install Task
+#        uses: arduino/setup-task@v2
+#        with:
+#          version: 3.x
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - name: Run tests
+#        run: task test:linux
 
   build:
     needs: [prepare, lint, test]
@@ -97,7 +97,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Linux binary
-        run: task build:linux:docker
+        run: task build:linux
 
       - name: Build Windows binary
         run: task build:windows
