--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,33 +12,33 @@ jobs:
       - id: go-cache
         run: echo "cache-key=${{ hashFiles('**/go.sum') }}" >> $GITHUB_OUTPUT
 
-  lint:
-    needs: prepare
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.23
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-lint-${{ needs.prepare.outputs.go-cache-key }}
-      
-      - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.x
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Run linting
-        run: task lint:linux
+#  lint:
+#    needs: prepare
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-go@v5
+#        with:
+#          go-version: 1.23
+#      - name: Install system dependencies
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
+#      - uses: actions/cache@v4
+#        with:
+#          path: |
+#            ~/.cache/go-build
+#            ~/go/pkg/mod
+#          key: ${{ runner.os }}-go-lint-${{ needs.prepare.outputs.go-cache-key }}
+#
+#      - name: Install Task
+#        uses: arduino/setup-task@v2
+#        with:
+#          version: 3.x
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - name: Run linting
+#        run: task lint:linux
 
 #  test:
 #    needs: prepare
@@ -69,7 +69,8 @@ jobs:
 #        run: task test:linux
 
   build:
-    needs: [prepare, lint, test]
+    # needs: [prepare, lint, test]
+    needs: [prepare]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
