Enhance CI workflow by adding Wire installation step
- Added a step to the GitHub Actions workflow to install the Wire dependency for Go projects, ensuring that the necessary tools are available for building and managing dependencies in the CI environment.
- This change improves the reliability of the build process by automating the installation of required tools.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -91,6 +91,9 @@ jobs:
             ${{ runner.os }}-go-build-
             ${{ runner.os }}-go-
 
+      - name: Install Wire
+        run: go install github.com/google/wire/cmd/wire@latest
+
       - name: Install Task
         uses: arduino/setup-task@v2
         with:
