Update CI workflows for improved build triggers and code quality checks
- Modified the GitHub Actions workflow for Go projects to trigger on specific paths, ensuring that builds only occur when relevant files are changed.
- Added a workflow_dispatch event to the Qodana code quality workflow, allowing manual triggering of code quality checks.
- These changes enhance the efficiency of the CI process and improve the management of code quality in the project.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,21 @@
 name: Build and Test
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+    paths:
+      - '**.go'
+      - 'go.mod'
+      - 'go.sum'
+      - '.github/workflows/go.yml'
+      - 'build/**'
+  pull_request:
+    paths:
+      - '**.go'
+      - 'go.mod'
+      - 'go.sum'
+      - '.github/workflows/go.yml'
+      - 'build/**'
 
 jobs:
   prepare:
