Update CI workflow to include additional system dependencies
- Enhanced the GitHub Actions workflow by adding installation of additional system dependencies (libgl1-mesa-dev, libglx-dev, pkg-config) alongside existing packages.
- This change ensures that all necessary libraries are available for building and running the application in the CI environment, further improving build reliability.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -95,7 +95,17 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
+          sudo apt-get install -y \
+            gcc \
+            libgl1-mesa-dev \
+            libx11-dev \
+            libxcursor-dev \
+            libxrandr-dev \
+            libxinerama-dev \
+            libxi-dev \
+            libxxf86vm-dev \
+            libglx-dev \
+            pkg-config
       - uses: actions/cache@v4
         with:
           path: |
