Update build command in Taskfile.yaml to exclude Linux tag
- Modified the build command for the Windows target in Taskfile.yaml to explicitly exclude the Linux build tag by changing it from `-tags "windows nomobile"` to `-tags "windows,!linux,nomobile"`.
- This change clarifies the build configuration and ensures that the Windows build process does not inadvertently include Linux dependencies.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -75,7 +75,7 @@ tasks:
     desc: Build for Windows
     deps: [wire:windows]
     cmds:
-      - go build -tags "windows nomobile" -o bin/godo.exe cmd/godo/main.go
+      - go build -tags "windows,!linux,nomobile" -o bin/godo.exe cmd/godo/main.go
 
   build:linux:
     desc: Build for Linux
