Enhance Taskfile.yaml for platform-specific builds and wire code generation
- Added separate tasks for generating wire code and building for Windows and Linux platforms.
- Updated the wire task description to clarify it generates code for the current platform.
- Streamlined build commands to utilize platform-specific tasks, improving clarity and maintainability.
- Removed the cross-build task in favor of dedicated tasks for each platform, ensuring a more straightforward build process.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -28,22 +28,37 @@ tasks:
       - docker rm -f godo-linux-test godo-linux-build godo-linux-lint || true
       - docker rmi -f godo-linux-test godo-linux-builder godo-linux-wire godo-linux-lint || true
 
-  wire:
-    desc: Generate wire code
+  wire:windows:
+    desc: Generate wire code for Windows
     cmds:
-      - cd internal/container; wire gen -tags {{.GOOS}}
+      - cd internal/container; wire gen -tags windows
+
+  wire:linux:
+    desc: Generate wire code for Linux
+    cmds:
+      - cd internal/container; wire gen -tags linux
+
+  wire:
+    desc: Generate wire code for current platform
+    cmds:
+      - task: wire:{{if eq OS "windows"}}windows{{else}}linux{{end}}
 
   build:
     desc: Build for current platform
-    deps: [wire]
     cmds:
-      - go build -tags {{.GOOS}} -o bin/godo{{if eq .GOOS "windows"}}.exe{{end}} cmd/godo/main.go
+      - task: build:{{if eq OS "windows"}}windows{{else}}linux{{end}}
 
-  build:cross:
-    desc: Build for other platform
-    deps: [wire]
+  build:windows:
+    desc: Build for Windows
+    deps: [wire:windows]
     cmds:
-      - GOOS={{if eq .GOOS "windows"}}linux{{else}}windows{{end}} CGO_ENABLED=0 go build -tags {{if eq .GOOS "windows"}}linux{{else}}windows{{end}} -o bin/godo{{if eq .GOOS "linux"}}.exe{{end}} cmd/godo/main.go
+      - GOOS=windows go build -tags windows -o bin/godo.exe cmd/godo/main.go
+
+  build:linux:
+    desc: Build for Linux
+    deps: [wire:linux]
+    cmds:
+      - GOOS=linux CGO_ENABLED=0 go build -tags linux -o bin/godo cmd/godo/main.go
 
   build:docker:
     desc: Build using Docker
