--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,62 +27,6 @@ jobs:
       - id: go-cache
         run: echo "cache-key=${{ hashFiles('**/go.sum') }}" >> $GITHUB_OUTPUT
 
-#  lint:
-#    needs: prepare
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-go@v5
-#        with:
-#          go-version: 1.23
-#      - name: Install system dependencies
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
-#      - uses: actions/cache@v4
-#        with:
-#          path: |
-#            ~/.cache/go-build
-#            ~/go/pkg/mod
-#          key: ${{ runner.os }}-go-lint-${{ needs.prepare.outputs.go-cache-key }}
-#
-#      - name: Install Task
-#        uses: arduino/setup-task@v2
-#        with:
-#          version: 3.x
-#          repo-token: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Run linting
-#        run: task lint:linux
-
-#  test:
-#    needs: prepare
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-go@v5
-#        with:
-#          go-version: 1.23
-#      - name: Install system dependencies
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y gcc libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxxf86vm-dev
-#      - uses: actions/cache@v4
-#        with:
-#          path: |
-#            ~/.cache/go-build
-#            ~/go/pkg/mod
-#          key: ${{ runner.os }}-go-test-${{ needs.prepare.outputs.go-cache-key }}
-#
-#      - name: Install Task
-#        uses: arduino/setup-task@v2
-#        with:
-#          version: 3.x
-#          repo-token: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Run tests
-#        run: task test:linux
-
   build:
     needs: [prepare]
     runs-on: ubuntu-latest
@@ -94,12 +38,7 @@ jobs:
             artifact: godo.exe
           - os: linux
             arch: amd64
-            artifact: godo-linux
-          # Optionally add more combinations like:
-          # - os: linux
-          #   arch: arm64
-          #   artifact: godo-linux-arm64
-
+            artifact: godo
     steps:
       - uses: actions/checkout@v4
       
@@ -108,7 +47,7 @@ jobs:
           go-version: 1.23
           cache: true  # Enable Go module caching
       
-      # Only install system dependencies for Linux builds
+      # Install system dependencies
       - name: Install system dependencies
         if: matrix.os == 'linux'
         run: |
