--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Linux binary
-        run: task build:linux:docker
+        run: task build:linux
 
       - name: Build Windows binary
         run: task build:windows
@@ -58,7 +58,7 @@ jobs:
           name: binaries
           path: |
             bin/godo.exe
-            bin/godo-linux
+            bin/godo
 
   release:
     needs: [prepare, build]
@@ -74,7 +74,7 @@ jobs:
         with:
           files: |
             bin/godo.exe
-            bin/godo-linux
+            bin/godo
           generate_release_notes: true
           draft: false
           prerelease: false 
