Enhance Taskfile and GitHub Actions for improved build configurations
- Updated Taskfile.yaml to simplify local GitHub Actions execution by modifying the `act` command to include the workflow file explicitly.
- Enhanced the GitHub Actions workflow by adding compiler configurations for Windows and Linux builds, ensuring proper compilation for each platform.
- Adjusted system dependencies installation to include `mingw-w64` for Windows builds, improving compatibility and build success rates.
- Updated environment variables in the workflow to utilize the correct compiler based on the operating system, enhancing the build process.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,9 +36,11 @@ jobs:
           - os: windows
             arch: amd64
             artifact: godo.exe
+            cc: x86_64-w64-mingw32-gcc
           - os: linux
             arch: amd64
             artifact: godo
+            cc: gcc
     steps:
       - uses: actions/checkout@v4
       
@@ -49,11 +51,11 @@ jobs:
       
       # Install system dependencies
       - name: Install system dependencies
-        if: matrix.os == 'linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             gcc \
+            mingw-w64 \
             libgl1-mesa-dev \
             libx11-dev \
             libxcursor-dev \
@@ -89,6 +91,7 @@ jobs:
         env:
           GOOS: ${{ matrix.os }}
           GOARCH: ${{ matrix.arch }}
+          CC: ${{ matrix.cc }}
         run: task build:${{ matrix.os }}
 
       # Add versioning based on git tags
