Refactor application structure and enhance hotkey management
- Updated application initialization to streamline logger and app setup, improving error handling and resource management.
- Refactored hotkey management to include platform-specific implementations for Windows and Linux, enhancing global hotkey functionality.
- Introduced a systray menu for the main application window, allowing for better user interaction and accessibility.
- Updated VSCode settings to reflect new build tags, ensuring a consistent development environment.
- Enhanced logging throughout the application for improved error tracking and debugging capabilities.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "gopls": {
-        "buildFlags": ["-tags=windows"],
+        "buildFlags": ["-tags=windows,wireinject"],
         "staticcheck": true,
         "completeUnimported": true,
         "matcher": "fuzzy",
