Enhance application startup and logging, refactor hotkey management
- Updated `.vscode/settings.json` to include environment variables for Windows builds, improving development setup.
- Refactored `main.go` to add panic recovery and enhanced logging during application startup, improving error handling and user feedback.
- Modified `app.go` to integrate a new `quickNote` interface, streamlining the application structure and improving hotkey management.
- Removed obsolete hotkey files for Linux and Windows, consolidating hotkey functionality into a single manager for better maintainability.
- Enhanced logging throughout the application to provide clearer insights during execution and setup processes.
- Updated container and GUI components to reflect changes in hotkey management and application initialization, ensuring a cohesive structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,12 @@
         "staticcheck": true,
         "completeUnimported": true,
         "matcher": "fuzzy",
-        "usePlaceholders": true
+        "usePlaceholders": true,
+        "env": {
+            "GOOS": "windows",
+            "GOARCH": "amd64",
+            "CGO_ENABLED": "1"
+        }
     },
     "go.formatTool": "goimports",
     "go.lintTool": "golangci-lint",
@@ -26,7 +31,6 @@
             "source.organizeImports": "explicit"
         }
     },
-    "go.coverOnSave": true,
     "go.coverOnSingleTest": true,
     "go.coverageDecorator": {
         "type": "highlight",
@@ -36,7 +40,7 @@
         "uncoveredGutterStyle": "blockred"
     },
     "go.testFlags": ["-v"],
-    "go.testOnSave": true,
+    "go.testOnSave": false,
     "go.testTags": "windows",
     "go.testTimeout": "5m"
 }
